Edit copyright year, make it always display the current year right now (generated from javascript)

--- a/index.html
+++ b/index.html
@@ -253,8 +253,8 @@
         </ul>
 
         <!-- copyright -->
-        <div class="font-alata text-dark-gray">
-          &copy; 2021 Loopstudios. All rights reserved.
+        <div class="font-alata text-dark-gray copyright">
+          &copy; <span class="yyyy">-</span> Loopstudios. All rights reserved.
         </div>
 
       </section>
